k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    selector: # define a set of pods to control
        matchLabels:
            component: web
    replicas: 3 # create [number] pods
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                - name: client
                  image: samnoh/multi-client
                  imagePullPolicy: IfNotPresent
                  resources:
                      requests:
                          cpu: 50m
                          memory: 100Mi
                      limits:
                          cpu: 100m
                          memory: 150Mi
                  ports:
                      - containerPort: 3000
