k8s/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: client-pod
    labels:
        component: web
spec:
    containers:
        - name: client
          image: samnoh/multi-worker
          resources:
              requests:
                  cpu: 50m
                  memory: 50Mi
              limits:
                  cpu: 100m
                  memory: 100Mi
          ports:
              - containerPort: 9999 # expose port 3000
