k8s/postgres-cluster-ip-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
spec:
    selector:
        matchLabels:
            component: postgres
    replicas: 1
    template:
        metadata:
            labels:
                component: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres
                  resources:
                      requests:
                          cpu: 100m
                          memory: 100Mi
                      limits:
                          cpu: 150m
                          memory: 150Mi
                  ports:
                      - containerPort: 5432
