k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-deployment
spec:
    selector:
        matchLabels:
            component: redis
    replicas: 1
    template:
        metadata:
            labels:
                component: redis
        spec:
            containers:
                - name: redis
                  image: redis
                  resources:
                      requests:
                          cpu: 100m
                          memory: 100Mi
                      limits:
                          cpu: 150m
                          memory: 150Mi
                  ports:
                      - containerPort: 6379
