k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    selector:
        matchLabels:
            component: server
    replicas: 3
    template:
        metadata:
            labels:
                component: server
        spec:
            containers:
                - name: server
                  image: samnoh/multi-server
                  imagePullPolicy: Never
                  resources:
                      requests:
                          cpu: 100m
                          memory: 150Mi
                      limits:
                          cpu: 150m
                          memory: 200Mi
                  ports:
                      - containerPort: 5000
