k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment
spec:
    selector:
        matchLabels:
            component: worker
    replicas: 1
    template:
        metadata:
            labels:
                component: worker
        spec:
            containers:
                - name: worker
                  image: samnoh/multi-worker
                  imagePullPolicy: IfNotPresent
                  resources:
                      requests:
                          cpu: 100m
                          memory: 100Mi
                      limits:
                          cpu: 150m
                          memory: 150Mi
